--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -209,7 +209,7 @@
 
  <section class='container'>
           <hgroup>
-            <h1>Welcome, Lenok, to your WildFly 8 application on OpenShift</h1>
+            <h1>Welcome, Lenok, to your WildFly 8 application on OpenShift. Зд</h1>
           </hgroup>
 
 
