--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -209,7 +209,8 @@
 
  <section class='container'>
           <hgroup>
-            <h1>Welcome, Lenok, to your WildFly 8 application on OpenShift. Зд</h1>
+            <h1>Blinkomom<h1>
+			<h3>Blinkomom<h3>
           </hgroup>
 
 
