--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,6 +8,8 @@
 
 <div><img src="images/jbosscorp_logo.png"></div>
 <h1>Blinkomom<h1>
+<button onclick="myFunction()">Try it</button>
+
 <div id="nav" height=200px;width=100px;float:left>
 <p>Салаты</p>
  <select>
@@ -15,6 +17,14 @@
   
 </select> 
 </div>
+<script>
+function myFunction() {
+var person = prompt("Please enter your name", "Harry Potter");
+if (person != null) {
+    document.getElementById("nav").innerHTML =
+    "Hello " + person + "! How are you today?";
+}}
+</script>
 <div id="section" height=200px;width=100px;float:left>
 <p>Выпечка</p>
  <select>
