--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,51 +1,23 @@
-﻿<HTML>
-<HEAD>
+﻿<!DOCTYPE html>
+<html>
+<body>
 
-	<TITLE>Blinkomom</TITLE>
-	
-</HEAD>
-<BODY>
+<p>Click the button to demonstrate the prompt box.</p>
 
-<div><img src="images/jbosscorp_logo.png"></div>
-<h1>Blinkomom<h1>
 <button onclick="myFunction()">Try it</button>
 
-<div id="nav" height=200px;width=100px;float:left>
-<p>Салаты</p>
- <select>
-  <option value="volvo">Королевский</option>
-  
-</select> 
-</div>
+<p id="demo"></p>
+
 <script>
 function myFunction() {
-var person = prompt("Please enter your name", "Harry Potter");
-if (person != null) {
-    document.getElementById("nav").innerHTML =
-    "Hello " + person + "! How are you today?";
-}}
+    var person = prompt("Please enter your name", "Harry Potter");
+    
+    if (person != null) {
+        document.getElementById("demo").innerHTML =
+        "Hello " + person + "! How are you today?";
+    }
+}
 </script>
-<div id="section" height=200px;width=100px;float:left>
-<p>Выпечка</p>
- <select>
-  <option value="volvo">-</option>
-  
-</select> 
-</div>
-<div>
-<p>Основные блюда</p>
- <select>
-  <option value="volvo">Борщ</option>
-  
-</select> 
-</div>
-<div>
-<p>Вторые блюда</p>
- <select>
-  <option value="volvo">-</option>
-  
-</select> 
-</div>
-</BODY>
-</HTML>
 
+</body>
+</html>
