--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,13 +1,13 @@
 ﻿<HTML>
 <HEAD>
 
-	<TITLE>Blinkomom</TITLE>
+	<TITLE></TITLE>
 	
 </HEAD>
 <BODY>
 
 <div><img src="images/jbosscorp_logo.png"></div>
-<h1>Blinkomom<h1>
+<h1><h1>
 
 <div id="nav" height=200px;width=100px;float:left>
 <p id="na"></p>
