--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,7 @@
 <BODY>
 
 <div><img src="images/jbosscorp_logo.png"></div>
+<div><img src="images/o.png"></div>
 <h1>Blinkomom<h1>
 
 <div id="nav" height=200px;width=100px;float:left>
