--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,55 +1,1 @@
-﻿<HTML>
-<HEAD>
-
-	<TITLE></TITLE>
-	
-</HEAD>
-<BODY>
-
-<div><img src="images/jbosscorp_logo.png"></div>
-
-<div><img src="images/o.png"></div>
-<h1>Blinkomom<h1>
-=======
-<h1><h1>
-
-<a href='a.php'>a</a> 
-<div id="nav" height=200px;width=100px;float:left>
-<p id="na"></p>
- <select>
-  <option value="volvo">Королевский</option>
-  
-</select> 
-</div>
-<script>
-function myFunction() {
-var person = prompt("Please enter your name", "Harry Potter");
-if (person != null) {
-    document.getElementById("na").innerHTML =
-    '<%=request.getAttribute("s")%>';
-}}
-</script>
-<div id="section" height=200px;width=100px;float:left>
-<p>Выпечка</p>
- <select>
-  <option value="volvo">-</option>
-  
-</select> 
-</div>
-<div>
-<p>Основные блюда</p>
- <select>
-  <option value="volvo">Борщ</option>
-  
-</select> 
-</div>
-<div>
-<p>Вторые блюда</p>
- <select>
-  <option value="volvo">-</option>
-  
-</select> 
-</div>
-</BODY>
-</HTML>
-
+﻿Ленка и Сережа
